Fix Dark Mode, Improve Green Theme, and Relocate Dayman Button

--- a/src/index.css
+++ b/src/index.css
@@ -2,45 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Green theme styles */
-.green {
-  --tw-bg-opacity: 1;
-  background-color: rgb(20 83 45 / var(--tw-bg-opacity));
-  color: rgb(187 247 208);
-}
-
-.green .bg-gradient-to-br {
-  background-image: linear-gradient(to bottom right, rgb(34 197 94), rgb(22 163 74), rgb(21 128 61));
-}
-
-.green .text-gray-900 {
-  color: rgb(187 247 208);
-}
-
-.green .text-gray-600 {
-  color: rgb(134 239 172);
-}
-
-.green .text-gray-300 {
-  color: rgb(134 239 172);
-}
-
-.green .bg-white\/95 {
-  background-color: rgb(22 101 52 / 0.95);
-}
-
-.green .bg-white\/80 {
-  background-color: rgb(22 101 52 / 0.8);
-}
-
-.green .border-pink-200\/50 {
-  border-color: rgb(34 197 94 / 0.5);
-}
-
-.green .border-gray-700\/50 {
-  border-color: rgb(34 197 94 / 0.5);
-}
-
 /* Mobile-first responsive design */
 @media (max-width: 640px) {
   .container {
